# tapio_backend

./: .gitignore  .python-version  README.md  docker-compose.yml  helper_connectDocker.sh
backend/: Dockerfile  poetry.toml  pyproject.toml  swagger_schema.json  test.py
backend/project/: authentication.py  mixin.py  settings.py  urls.py
backend/tapio/: apps.py  filters.py  serializers.py  signals.py  tests.py  urls.py  viewsets.py
backend/tapio/fixtures/: companies.json  modifications.json  modifiedSources.json  reductionStrategies.json  reportEntries.json  reports.json  sources.json  units.json
backend/tapio/migrations/: 0001_initial.py  0002_auto_20230322_1207.py  0002_sourcemodification.py  0003_sourcelink_rename_lifetime_source_lifetime_local_and_more.py  0004_alter_sourcelink_ratio.py  0005_modifiedsource_and_more.py  0006_remove_report_sources_report_sources.py  0007_alter_report_sources.py  0008_report_scenarios.py  0009_alter_report_scenarios.py  0010_report_year.py  0011_auto_20230303_1054.py
backend/tapio/models/: __init__.py  company.py  modification.py  modifiedSource.py  reductionStrategy.py  report.py  reportEntry.py  source.py  sourceLink.py  unit.py  userProfile.py
thunder-tests/: thunderCollection.json  thunderclient.json
